@@ -44,7 +44,6 @@ import androidx.annotation.DrawableRes;
 import androidx.annotation.NonNull;
 import androidx.annotation.Nullable;
 import androidx.appcompat.content.res.AppCompatResources;
-import org.signal.core.ui.compose.Snackbars;
 import androidx.compose.ui.platform.ComposeView;
 import androidx.coordinatorlayout.widget.CoordinatorLayout;
 import androidx.core.view.ViewCompat;
@@ -56,7 +55,6 @@ import androidx.recyclerview.widget.LinearSmoothScroller;
 import androidx.recyclerview.widget.RecyclerView;
 
 import com.airbnb.lottie.SimpleColorFilter;
-import com.annimon.stream.Stream;
 import com.bumptech.glide.Glide;
 import com.google.android.material.animation.ArgbEvaluatorCompat;
 import com.google.android.material.appbar.AppBarLayout;
@@ -66,8 +64,14 @@ import com.google.android.material.dialog.MaterialAlertDialogBuilder;
 import org.greenrobot.eventbus.EventBus;
 import org.greenrobot.eventbus.Subscribe;
 import org.greenrobot.eventbus.ThreadMode;
+import org.signal.core.ui.BottomSheetUtil;
+import org.signal.core.ui.WindowSizeClassExtensionsKt;
+import org.signal.core.ui.compose.Snackbars;
 import org.signal.core.ui.util.ThemeUtil;
+import org.signal.core.ui.view.Stub;
+import org.signal.core.util.AppForegroundObserver;
 import org.signal.core.util.DimensionUnit;
+import org.signal.core.util.ServiceUtil;
 import org.signal.core.util.Stopwatch;
 import org.signal.core.util.concurrent.LifecycleDisposable;
 import org.signal.core.util.concurrent.SignalExecutors;
@@ -86,13 +90,13 @@ import org.thoughtcrime.securesms.backup.v2.ui.BackupAlertBottomSheet;
 import org.thoughtcrime.securesms.backup.v2.ui.BackupAlertDelegate;
 import org.thoughtcrime.securesms.banner.Banner;
 import org.thoughtcrime.securesms.banner.BannerManager;
+import org.thoughtcrime.securesms.banner.banners.ArchiveRestoreStatusBanner;
 import org.thoughtcrime.securesms.banner.banners.ArchiveUploadStatusBanner;
 import org.thoughtcrime.securesms.banner.banners.CdsPermanentErrorBanner;
 import org.thoughtcrime.securesms.banner.banners.CdsTemporaryErrorBanner;
 import org.thoughtcrime.securesms.banner.banners.DeprecatedBuildBanner;
 import org.thoughtcrime.securesms.banner.banners.DeprecatedSdkBanner;
 import org.thoughtcrime.securesms.banner.banners.DozeBanner;
-import org.thoughtcrime.securesms.banner.banners.ArchiveRestoreStatusBanner;
 import org.thoughtcrime.securesms.banner.banners.OutdatedBuildBanner;
 import org.thoughtcrime.securesms.banner.banners.ServiceOutageBanner;
 import org.thoughtcrime.securesms.banner.banners.UnauthorizedBanner;
@@ -113,8 +117,11 @@ import org.thoughtcrime.securesms.contacts.paged.ContactSearchAdapter;
 import org.thoughtcrime.securesms.contacts.paged.ContactSearchConfiguration;
 import org.thoughtcrime.securesms.contacts.paged.ContactSearchData;
 import org.thoughtcrime.securesms.contacts.paged.ContactSearchKey;
-import org.thoughtcrime.securesms.contacts.paged.ContactSearchMediator;
+import org.thoughtcrime.securesms.contacts.paged.ContactSearchPagedDataSourceRepository;
+import org.thoughtcrime.securesms.contacts.paged.ContactSearchRepository;
 import org.thoughtcrime.securesms.contacts.paged.ContactSearchState;
+import org.thoughtcrime.securesms.contacts.paged.ContactSearchViewModel;
+import org.thoughtcrime.securesms.contacts.paged.ContactSearchViewModelKt;
 import org.thoughtcrime.securesms.contacts.selection.ContactSelectionArguments;
 import org.thoughtcrime.securesms.conversation.ConversationUpdateTick;
 import org.thoughtcrime.securesms.conversationlist.chatfilter.ConversationFilterRequest;
@@ -126,7 +133,7 @@ import org.thoughtcrime.securesms.conversationlist.model.ConversationFilter;
 import org.thoughtcrime.securesms.database.MessageTable.MarkedMessageInfo;
 import org.thoughtcrime.securesms.database.SignalDatabase;
 import org.thoughtcrime.securesms.database.ThreadTable;
-import org.thoughtcrime.securesms.database.model.ThreadRecord;
+import org.thoughtcrime.securesms.database.model.ThreadWithRecipient;
 import org.thoughtcrime.securesms.dependencies.AppDependencies;
 import org.thoughtcrime.securesms.groups.SelectionLimits;
 import org.thoughtcrime.securesms.jobs.RefreshOwnProfileJob;
@@ -146,21 +153,18 @@ import org.thoughtcrime.securesms.recipients.RecipientId;
 import org.thoughtcrime.securesms.search.MessageResult;
 import org.thoughtcrime.securesms.search.SearchFilter;
 import org.thoughtcrime.securesms.search.SearchFilterBottomSheet;
+import org.thoughtcrime.securesms.search.SearchRepository;
 import org.thoughtcrime.securesms.sms.MessageSender;
-import org.thoughtcrime.securesms.util.AppForegroundObserver;
 import org.thoughtcrime.securesms.util.AppStartup;
-import org.signal.core.ui.BottomSheetUtil;
-import org.signal.core.ui.view.Stub;
 import org.thoughtcrime.securesms.util.CachedInflater;
 import org.thoughtcrime.securesms.util.ConversationUtil;
-import org.thoughtcrime.securesms.util.ServiceUtil;
 import org.thoughtcrime.securesms.util.RemoteConfig;
 import org.thoughtcrime.securesms.util.SignalLocalMetrics;
 import org.thoughtcrime.securesms.util.SnapToTopDataObserver;
+import org.thoughtcrime.securesms.util.TextSecurePreferences;
 import org.thoughtcrime.securesms.util.ViewUtil;
 import org.thoughtcrime.securesms.util.adapter.mapping.PagingMappingAdapter;
 import org.thoughtcrime.securesms.verify.SelfVerificationFailureSheet;
-import org.signal.core.ui.WindowSizeClassExtensionsKt;
 import org.whispersystems.signalservice.api.websocket.WebSocketConnectionState;
 
 import java.lang.ref.WeakReference;
@@ -196,12 +200,16 @@ public class ConversationListFragment extends MainFragment implements Conversati
 
   private static final String TAG = Log.tag(ConversationListFragment.class);
 
+  private static final long SEARCH_LOADING_SHOW_DELAY_MS = 150L;
+
   private static final int MAX_CHATS_ABOVE_FOLD             = 7;
   private static final int MAX_CONTACTS_ABOVE_FOLD          = 5;
   private static final int MAX_GROUP_MEMBERSHIPS_ABOVE_FOLD = 5;
   private View                                   coordinator;
   private RecyclerView                           chatFolderList;
   private RecyclerView                           list;
+  private View                                   searchLoading;
+  private boolean                                searchInProgress;
   private Stub<ComposeView>                      bannerView;
   private ConversationListFilterPullView         pullView;
   private AppBarLayout                           pullViewAppBarLayout;
@@ -209,6 +217,11 @@ public class ConversationListFragment extends MainFragment implements Conversati
   private RecyclerView.Adapter                   activeAdapter;
   private ConversationListAdapter                defaultAdapter;
   private PagingMappingAdapter<ContactSearchKey> searchAdapter;
+  private final Runnable                         showSearchLoadingRunnable = () -> {
+    if (searchLoading != null && searchInProgress && activeAdapter == searchAdapter) {
+      searchLoading.setVisibility(View.VISIBLE);
+    }
+  };
   private SnapToTopDataObserver                  snapToTopDataObserver;
   private Drawable                               archiveDrawable;
   private AppForegroundObserver.Listener         appForegroundObserver;
@@ -224,7 +237,7 @@ public class ConversationListFragment extends MainFragment implements Conversati
   protected ConversationListArchiveItemDecoration archiveDecoration;
   protected ConversationListItemAnimator          itemAnimator;
   private   Stopwatch                             startupStopwatch;
-  private   ContactSearchMediator                 contactSearchMediator;
+  private   ContactSearchViewModel                contactSearchViewModel;
   private   MainToolbarViewModel                  mainToolbarViewModel;
   private   ChatListBackHandler                   chatListBackHandler;
 
@@ -304,50 +317,47 @@ public class ConversationListFragment extends MainFragment implements Conversati
 
     chatFolderList          = view.findViewById(R.id.chat_folder_list);
     list                    = view.findViewById(R.id.list);
+    searchLoading           = view.findViewById(R.id.search_loading);
     bottomActionBar         = view.findViewById(R.id.conversation_list_bottom_action_bar);
     bannerView              = new Stub<>(view.findViewById(R.id.banner_compose_view));
     voiceNotePlayerViewStub = new Stub<>(view.findViewById(R.id.voice_note_player));
     pullView                = view.findViewById(R.id.pull_view);
     pullViewAppBarLayout    = view.findViewById(R.id.recycler_coordinator_app_bar);
 
-    contactSearchMediator = new ContactSearchMediator(this,
-                                                      Collections.emptySet(),
-                                                      SelectionLimits.NO_LIMITS,
-                                                      false,
-                                                      new ContactSearchAdapter.DisplayOptions(
-                                                          false,
-                                                          ContactSearchAdapter.DisplaySecondaryInformation.NEVER,
-                                                          false,
-                                                          false
-                                                      ),
-                                                      this::mapSearchStateToConfiguration,
-                                                      new ContactSearchMediator.SimpleCallbacks(),
-                                                      false,
-                                                      (context,
-                                                       fixedContacts,
-                                                       displayOptions,
-                                                       callbacks,
-                                                       longClickCallbacks,
-                                                       storyContextMenuCallbacks,
-                                                       callButtonClickCallbacks
-                                                      ) -> {
-                                                        //noinspection CodeBlock2Expr
-                                                        return new ConversationListSearchAdapter(
-                                                            context,
-                                                            fixedContacts,
-                                                            displayOptions,
-                                                            new ContactSearchClickCallbacks(callbacks),
-                                                            longClickCallbacks,
-                                                            storyContextMenuCallbacks,
-                                                            callButtonClickCallbacks,
-                                                            getViewLifecycleOwner(),
-                                                            Glide.with(this)
-                                                        );
-                                                      },
-                                                      new ConversationListSearchAdapter.ChatFilterRepository()
+    contactSearchViewModel = new ViewModelProvider(this, new ContactSearchViewModel.Factory(
+        SelectionLimits.NO_LIMITS,
+        false,
+        new ContactSearchRepository(),
+        false,
+        new ConversationListSearchAdapter.ChatFilterRepository(),
+        new SearchRepository(requireContext().getString(R.string.note_to_self)),
+        new ContactSearchPagedDataSourceRepository(requireContext()),
+        Collections.emptySet(),
+        true
+    )).get(ContactSearchViewModel.class);
+
+    searchAdapter = new ConversationListSearchAdapter(
+        requireContext(),
+        Collections.emptySet(),
+        new ContactSearchAdapter.DisplayOptions(false, ContactSearchAdapter.DisplaySecondaryInformation.NEVER, false, false),
+        new ContactSearchClickCallbacks(),
+        new ContactSearchAdapter.LongClickCallbacksAdapter(),
+        new ContactSearchAdapter.StoryContextMenuCallbacks() {
+          @Override public void onOpenStorySettings(@NonNull ContactSearchData.Story story) {}
+          @Override public void onRemoveGroupStory(@NonNull ContactSearchData.Story story, boolean isSelected) {}
+          @Override public void onDeletePrivateStory(@NonNull ContactSearchData.Story story, boolean isSelected) {}
+        },
+        ContactSearchAdapter.EmptyCallButtonClickCallbacks.INSTANCE,
+        getViewLifecycleOwner(),
+        Glide.with(this)
     );
 
-    searchAdapter = contactSearchMediator.getAdapter();
+    ContactSearchViewModelKt.bindAdapterToLifecycle(contactSearchViewModel, getViewLifecycleOwner(), searchAdapter, this::mapSearchStateToConfiguration);
+    ContactSearchViewModelKt.bindSearchInProgressToLifecycle(contactSearchViewModel, getViewLifecycleOwner(), inProgress -> {
+      searchInProgress = inProgress;
+      updateSearchLoadingVisibility();
+      return Unit.INSTANCE;
+    });
 
     initializeSearchFilterListener();
 
@@ -431,12 +441,14 @@ public class ConversationListFragment extends MainFragment implements Conversati
     maybeScheduleRefreshProfileJob();
     ConversationListFragmentExtensionsKt.listenToEventBusWhileResumed(this, mainNavigationViewModel.getDetailLocation());
 
-    String query = contactSearchMediator.getFilter();
+    String query = contactSearchViewModel.getQuery().getValue();
     if (query != null) {
       onSearchQueryUpdated(query);
     }
 
-    if (SignalStore.settings().getAutomaticVerificationEnabled() &&
+    if (SignalStore.account().isRegistered() &&
+        !TextSecurePreferences.isUnauthorizedReceived(requireContext()) &&
+        SignalStore.settings().getAutomaticVerificationEnabled() &&
         SignalStore.misc().getHasKeyTransparencyFailure() &&
         !SignalStore.misc().getHasSeenKeyTransparencyFailure()) {
       SelfVerificationFailureSheet.show(getParentFragmentManager());
@@ -458,12 +470,12 @@ public class ConversationListFragment extends MainFragment implements Conversati
                                                      }
                                                    }));
 
-    if (isSplitPane(getWindowSizeClass(getResources()))) {
-      lifecycleDisposable.add(mainNavigationViewModel.getObservableActiveChatThreadId()
+    if (isSplitPane(getResources())) {
+      lifecycleDisposable.add(mainNavigationViewModel.getObservableActiveRecipientId()
                                                      .subscribeOn(AndroidSchedulers.mainThread())
-                                                     .subscribe(defaultAdapter::setActiveThreadId));
+                                                     .subscribe(id -> defaultAdapter.setActiveRecipientId(id.orElse(null))));
     } else {
-      defaultAdapter.setActiveThreadId(0);
+      defaultAdapter.setActiveRecipientId(null);
     }
 
     requireCallback().bindScrollHelper(list, getViewLifecycleOwner(), chatFolderList, color -> {
@@ -511,6 +523,11 @@ public class ConversationListFragment extends MainFragment implements Conversati
     activeAdapter  = null;
     defaultAdapter = null;
     searchAdapter  = null;
+
+    if (searchLoading != null) {
+      searchLoading.removeCallbacks(showSearchLoadingRunnable);
+      searchLoading = null;
+    }
 
     dismissProgressDialog();
 
@@ -604,8 +621,8 @@ public class ConversationListFragment extends MainFragment implements Conversati
         } else {
           builder.arbitrary(
               conversationFilterRequest.getSource() == ConversationFilterSource.DRAG
-              ? ConversationListSearchAdapter.ChatFilterOptions.WITHOUT_TIP.getCode()
-              : ConversationListSearchAdapter.ChatFilterOptions.WITH_TIP.getCode()
+              ? ConversationListSearchModels.ChatFilterOptions.WITHOUT_TIP.getCode()
+              : ConversationListSearchModels.ChatFilterOptions.WITH_TIP.getCode()
           );
         }
 
@@ -630,7 +647,7 @@ public class ConversationListFragment extends MainFragment implements Conversati
     }
   }
 
-  private void onConversationClicked(@NonNull ThreadRecord threadRecord) {
+  private void onConversationClicked(@NonNull ThreadWithRecipient threadRecord) {
     hideKeyboard();
     getNavigator().goToConversation(threadRecord.getRecipient().getId(),
                                     threadRecord.getThreadId(),
@@ -679,7 +696,7 @@ public class ConversationListFragment extends MainFragment implements Conversati
     lifecycleDisposable.add(
         viewModel.getFilterRequestState().subscribe(request -> {
           updateSearchToolbarHint(request);
-          contactSearchMediator.onConversationFilterRequestChanged(request);
+          contactSearchViewModel.setConversationFilterRequest(request);
         })
     );
 
@@ -729,13 +746,13 @@ public class ConversationListFragment extends MainFragment implements Conversati
                   authorIdStr != null ? RecipientId.from(Long.parseLong(authorIdStr)) : null
               );
               mainToolbarViewModel.setHasActiveSearchFilter(!activeSearchFilter.isEmpty());
-              contactSearchMediator.onSearchFilterChanged(activeSearchFilter);
+              contactSearchViewModel.setSearchFilter(activeSearchFilter);
               break;
 
             case SearchFilterBottomSheet.ACTION_CLEAR:
               activeSearchFilter = SearchFilter.EMPTY;
               mainToolbarViewModel.setHasActiveSearchFilter(false);
-              contactSearchMediator.onSearchFilterChanged(activeSearchFilter);
+              contactSearchViewModel.setSearchFilter(activeSearchFilter);
               break;
 
             case SearchFilterBottomSheet.ACTION_SELECT_AUTHOR:
@@ -913,6 +930,25 @@ public class ConversationListFragment extends MainFragment implements Conversati
       defaultAdapter.registerAdapterDataObserver(snapToTopDataObserver);
     } else {
       defaultAdapter.unregisterAdapterDataObserver(snapToTopDataObserver);
+    }
+
+    updateSearchLoadingVisibility();
+  }
+
+  private void updateSearchLoadingVisibility() {
+    if (searchLoading == null) {
+      return;
+    }
+
+    boolean shouldShow = searchInProgress && activeAdapter == searchAdapter;
+    searchLoading.removeCallbacks(showSearchLoadingRunnable);
+
+    if (shouldShow) {
+      if (searchLoading.getVisibility() != View.VISIBLE) {
+        searchLoading.postDelayed(showSearchLoadingRunnable, SEARCH_LOADING_SHOW_DELAY_MS);
+      }
+    } else {
+      searchLoading.setVisibility(View.GONE);
     }
   }
 
@@ -1170,7 +1206,7 @@ public class ConversationListFragment extends MainFragment implements Conversati
           protected Void doInBackground(Void... params) {
             Log.d(TAG, "[handleDelete] Deleting " + selectedConversations.size() + " chats");
             SignalDatabase.threads().deleteConversations(selectedConversations, true);
-            AppDependencies.getMessageNotifier().updateNotification(requireActivity());
+            AppDependencies.getMessageNotifier().updateNotification(AppDependencies.getApplication());
             Log.d(TAG, "[handleDelete] Delete complete");
             return null;
           }
@@ -1189,10 +1225,10 @@ public class ConversationListFragment extends MainFragment implements Conversati
   }
 
   private void handlePin(@NonNull Collection<Conversation> conversations) {
-    final Set<Long> toPin = new LinkedHashSet<>(Stream.of(conversations)
-                                                      .filterNot(conversation -> conversation.getThreadRecord().isPinned())
+    final Set<Long> toPin = new LinkedHashSet<>(conversations.stream()
+                                                      .filter(conversation -> !conversation.getThreadRecord().isPinned())
                                                       .map(conversation -> conversation.getThreadRecord().getThreadId())
-                                                      .toList());
+                                                      .collect(Collectors.toList()));
 
     if (toPin.size() + viewModel.getPinnedCount() > RemoteConfig.pinnedChatLimit()) {
       mainNavigationViewModel.getSnackbarRegistry().emit(new SnackbarState(
@@ -1460,9 +1496,9 @@ public class ConversationListFragment extends MainFragment implements Conversati
 
   private void updateMultiSelectState() {
     int     count       = viewModel.currentSelectedConversations().size();
-    boolean hasUnread   = Stream.of(viewModel.currentSelectedConversations()).anyMatch(conversation -> !conversation.getThreadRecord().isRead());
-    boolean hasUnpinned = Stream.of(viewModel.currentSelectedConversations()).anyMatch(conversation -> !conversation.getThreadRecord().isPinned());
-    boolean hasUnmuted  = Stream.of(viewModel.currentSelectedConversations()).anyMatch(conversation -> !conversation.getThreadRecord().getRecipient().live().get().isMuted());
+    boolean hasUnread   = viewModel.currentSelectedConversations().stream().anyMatch(conversation -> !conversation.getThreadRecord().isRead());
+    boolean hasUnpinned = viewModel.currentSelectedConversations().stream().anyMatch(conversation -> !conversation.getThreadRecord().isPinned());
+    boolean hasUnmuted  = viewModel.currentSelectedConversations().stream().anyMatch(conversation -> !conversation.getThreadRecord().getRecipient().live().get().isMuted());
     boolean canPin      = viewModel.getPinnedCount() < RemoteConfig.pinnedChatLimit();
 
     if (mainToolbarViewModel.isInActionMode()) {
@@ -1696,7 +1732,7 @@ public class ConversationListFragment extends MainFragment implements Conversati
 
     activeSearchFilter = SearchFilter.EMPTY;
     mainToolbarViewModel.setHasActiveSearchFilter(false);
-    contactSearchMediator.onSearchFilterChanged(activeSearchFilter);
+    contactSearchViewModel.setSearchFilter(activeSearchFilter);
 
     chatListBackHandler.setEnabled(false);
   }
@@ -1704,7 +1740,7 @@ public class ConversationListFragment extends MainFragment implements Conversati
   private void onSearchQueryUpdated(@NonNull String query) {
     String trimmed = query.trim();
 
-    contactSearchMediator.onFilterChanged(trimmed);
+    contactSearchViewModel.setQuery(trimmed);
 
     if (!trimmed.isEmpty()) {
       if (activeAdapter != searchAdapter && list != null) {
@@ -1798,7 +1834,7 @@ public class ConversationListFragment extends MainFragment implements Conversati
     }
 
     private void onTrueSwipe(RecyclerView.ViewHolder viewHolder) {
-      ThreadRecord thread = ((ConversationListItem) viewHolder.itemView).getThread();
+      ThreadWithRecipient thread = ((ConversationListItem) viewHolder.itemView).getThread();
 
       onItemSwiped(thread.getThreadId(), thread.getUnreadCount(), thread.getUnreadSelfMentionsCount());
     }
@@ -1919,20 +1955,14 @@ public class ConversationListFragment extends MainFragment implements Conversati
 
   private class ContactSearchClickCallbacks implements ConversationListSearchAdapter.ConversationListSearchClickCallbacks {
 
-    private final ContactSearchAdapter.ClickCallbacks delegate;
-
-    private ContactSearchClickCallbacks(@NonNull ContactSearchAdapter.ClickCallbacks delegate) {
-      this.delegate = delegate;
-    }
-
     @Override
     public void onThreadClicked(@NonNull View view, @NonNull ContactSearchData.Thread thread, boolean isSelected) {
-      onConversationClicked(thread.getThreadRecord());
+      onConversationClicked(thread.getThreadWithRecipient());
     }
 
     @Override
     public boolean onThreadLongClicked(@NonNull View view, @NonNull ContactSearchData.Thread thread) {
-      return showConversationContextMenu(new Conversation(thread.getThreadRecord()), view, true);
+      return showConversationContextMenu(new Conversation(thread.getThreadWithRecipient()), view, true);
     }
 
     @Override
@@ -1962,7 +1992,7 @@ public class ConversationListFragment extends MainFragment implements Conversati
 
     @Override
     public void onExpandClicked(@NonNull ContactSearchData.Expand expand) {
-      delegate.onExpandClicked(expand);
+      contactSearchViewModel.expandSection(expand.getSectionKey());
     }
 
     @Override
