@@ -10,10 +10,9 @@ import androidx.annotation.NonNull;
 import androidx.annotation.Nullable;
 import androidx.annotation.WorkerThread;
 
-import com.annimon.stream.Stream;
-
 import org.json.JSONException;
 import org.json.JSONObject;
+import org.signal.core.util.Stopwatch;
 import org.signal.core.util.StreamUtil;
 import org.signal.core.util.concurrent.SignalExecutors;
 import org.signal.core.util.logging.Log;
@@ -23,10 +22,8 @@ import org.thoughtcrime.securesms.database.LogDatabase;
 import org.thoughtcrime.securesms.dependencies.AppDependencies;
 import org.thoughtcrime.securesms.net.Networking;
 import org.thoughtcrime.securesms.net.StandardUserAgentInterceptor;
-import org.thoughtcrime.securesms.providers.BlobProvider;
 import org.thoughtcrime.securesms.service.KeyCachingService;
 import org.thoughtcrime.securesms.util.RemoteConfig;
-import org.signal.core.util.Stopwatch;
 
 import java.io.IOException;
 import java.io.OutputStream;
@@ -38,8 +35,11 @@ import java.util.Optional;
 import java.util.concurrent.ExecutionException;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Future;
+import java.util.concurrent.TimeUnit;
 import java.util.function.Consumer;
 import java.util.regex.Pattern;
+import java.util.stream.Collectors;
+import java.util.stream.Stream;
 import java.util.zip.GZIPOutputStream;
 import java.util.zip.ZipEntry;
 import java.util.zip.ZipOutputStream;
@@ -84,6 +84,7 @@ public class SubmitDebugLogRepository {
     if (Build.VERSION.SDK_INT >= 28) {
       add(new LogSectionPower());
     }
+    add(new LogSectionBattery());
     add(new LogSectionNotifications());
     add(new LogSectionNotificationProfiles());
     add(new LogSectionExoPlayerPool());
@@ -100,6 +101,7 @@ public class SubmitDebugLogRepository {
     }
     add(new LogSectionDatabaseSchema());
     add(new LogSectionRemappedRecords());
+    add(new LogSectionDatabaseIssues());
     add(new LogSectionLogcat());
     add(new LogSectionLoggerHeader());
     // MOLLY: For new sections, override getContentLocked() if content must be visible while locked.
@@ -179,10 +181,10 @@ public class SubmitDebugLogRepository {
     try {
 
       ParcelFileDescriptor[] fds        = ParcelFileDescriptor.createPipe();
-      Future<Uri>            futureUri  = BlobProvider.getInstance()
-                                                      .forData(new ParcelFileDescriptor.AutoCloseInputStream(fds[0]), 0)
-                                                      .withMimeType("application/gzip")
-                                                      .createForSingleSessionOnDiskAsync(context);
+      Future<Uri>            futureUri  = AppDependencies.getBlobs()
+                                                         .forData(new ParcelFileDescriptor.AutoCloseInputStream(fds[0]), 0)
+                                                         .withMimeType("application/gzip")
+                                                         .createForSingleSessionOnDiskAsync(context);
 
       OutputStream gzipOutput = new GZIPOutputStream(new ParcelFileDescriptor.AutoCloseOutputStream(fds[1]));
 
@@ -213,12 +215,12 @@ public class SubmitDebugLogRepository {
         }
 
         @Override public long contentLength() {
-          return BlobProvider.getInstance().calculateFileSize(context, gzipUri);
+          return AppDependencies.getBlobs().calculateFileSize(context, gzipUri);
         }
 
         @Override
         public void writeTo(@NonNull BufferedSink sink) throws IOException {
-          Source source = Okio.source(BlobProvider.getInstance().getStream(context, gzipUri));
+          Source source = Okio.source(AppDependencies.getBlobs().getStream(context, gzipUri));
           sink.writeAll(source);
         }
       });
@@ -226,7 +228,7 @@ public class SubmitDebugLogRepository {
       stopwatch.split("upload");
       stopwatch.stop(TAG);
 
-      BlobProvider.getInstance().delete(context, gzipUri);
+      AppDependencies.getBlobs().delete(context, gzipUri);
 
       return Optional.of(logUrl);
     } catch (IOException | RuntimeException | ExecutionException | InterruptedException e) {
@@ -253,10 +255,10 @@ public class SubmitDebugLogRepository {
       Stopwatch stopwatch = new Stopwatch("log-upload");
 
       ParcelFileDescriptor[] fds        = ParcelFileDescriptor.createPipe();
-      Future<Uri>            futureUri  = BlobProvider.getInstance()
-                                                      .forData(new ParcelFileDescriptor.AutoCloseInputStream(fds[0]), 0)
-                                                      .withMimeType("application/gzip")
-                                                      .createForSingleSessionOnDiskAsync(context);
+      Future<Uri>            futureUri  = AppDependencies.getBlobs()
+                                                         .forData(new ParcelFileDescriptor.AutoCloseInputStream(fds[0]), 0)
+                                                         .withMimeType("application/gzip")
+                                                         .createForSingleSessionOnDiskAsync(context);
 
       OutputStream gzipOutput = new GZIPOutputStream(new ParcelFileDescriptor.AutoCloseOutputStream(fds[1]));
 
@@ -286,12 +288,12 @@ public class SubmitDebugLogRepository {
         }
 
         @Override public long contentLength() {
-          return BlobProvider.getInstance().calculateFileSize(context, gzipUri);
+          return AppDependencies.getBlobs().calculateFileSize(context, gzipUri);
         }
 
         @Override
         public void writeTo(@NonNull BufferedSink sink) throws IOException {
-          Source source = Okio.source(BlobProvider.getInstance().getStream(context, gzipUri));
+          Source source = Okio.source(AppDependencies.getBlobs().getStream(context, gzipUri));
           sink.writeAll(source);
         }
       });
@@ -299,7 +301,7 @@ public class SubmitDebugLogRepository {
       stopwatch.split("upload");
       stopwatch.stop(TAG);
 
-      BlobProvider.getInstance().delete(context, gzipUri);
+      AppDependencies.getBlobs().delete(context, gzipUri);
 
       return Optional.of(logUrl);
     } catch (IOException | RuntimeException | ExecutionException | InterruptedException e) {
@@ -311,11 +313,13 @@ public class SubmitDebugLogRepository {
   @WorkerThread
   private @NonNull String uploadContent(@NonNull String contentType, @NonNull RequestBody requestBody) throws IOException {
     OkHttpClient client = new OkHttpClient.Builder()
-                                          .socketFactory(Networking.getSocketFactory())
-                                          .proxySelector(Networking.getProxySelectorForSocks())
-                                          .dns(Networking.getDns())
-                                          .addInterceptor(new StandardUserAgentInterceptor())
-                                          .build();
+        .addInterceptor(new StandardUserAgentInterceptor())
+        .socketFactory(Networking.getSocketFactory())
+        .proxySelector(Networking.getProxySelectorForSocks())
+        .dns(Networking.getDns())
+        .readTimeout(30, TimeUnit.SECONDS)
+        .writeTimeout(30, TimeUnit.SECONDS)
+        .build();
 
     try (Response response = client.newCall(new Request.Builder().url(API_ENDPOINT).get().build()).execute()) {
       ResponseBody body = response.body();
@@ -362,20 +366,30 @@ public class SubmitDebugLogRepository {
   private @NonNull List<LogLine> getPrefixLogLinesInternal() {
     long startTime = System.currentTimeMillis();
 
-    int maxTitleLength = Stream.of(SECTIONS).reduce(0, (max, section) -> Math.max(max, section.getTitle().length()));
+    int maxTitleLength = SECTIONS.stream().reduce(0, (max, section) -> Math.max(max, section.getTitle().length()), Integer::sum);
+
+    List<Future<List<LogLine>>> futures = new ArrayList<>(SECTIONS.size());
+    for (LogSection section : SECTIONS) {
+      futures.add(SignalExecutors.BOUNDED.submit(() -> getLinesForSection(context, section, maxTitleLength)));
+    }
 
     List<LogLine> allLines = new ArrayList<>();
-
-    for (LogSection section : SECTIONS) {
-      List<LogLine> lines = getLinesForSection(context, section, maxTitleLength);
-
-      if (SECTIONS.indexOf(section) != SECTIONS.size() - 1) {
-        for (int i = 0; i < SECTION_SPACING; i++) {
-          lines.add(SimpleLogLine.EMPTY);
-        }
+    for (int i = 0; i < futures.size(); i++) {
+      List<LogLine> lines;
+      try {
+        lines = futures.get(i).get();
+      } catch (InterruptedException | ExecutionException e) {
+        Log.w(TAG, "Failed to read section " + SECTIONS.get(i).getTitle(), e);
+        lines = new ArrayList<>();
       }
 
       allLines.addAll(lines);
+
+      if (i != futures.size() - 1) {
+        for (int j = 0; j < SECTION_SPACING; j++) {
+          allLines.add(SimpleLogLine.EMPTY);
+        }
+      }
     }
 
     List<LogLine> withIds = new ArrayList<>(allLines.size());
@@ -401,8 +415,7 @@ public class SubmitDebugLogRepository {
 
       List<LogLine> lines = Stream.of(Pattern.compile("\\n").split(content))
                                   .map(s -> new SimpleLogLine(s, LogStyleParser.parseStyle(s), LogStyleParser.parsePlaceholderType(s)))
-                                  .map(line -> (LogLine) line)
-                                  .toList();
+                                  .map(line -> (LogLine) line).collect(Collectors.toList());
 
       out.addAll(lines);
     }
